# bion

./: ARCHITECTURE.md  Cargo.toml  README.md  VOCABULARY.md  bion-three-crate-plan.md
.github/workflows/: ci.yml
crates/bion/: Cargo.toml
crates/bion-cns/: Cargo.toml
crates/bion-cns/src/: lib.rs
crates/bion-cns/src/circuit/: circuit.rs  fiber.rs  ganglion.rs  mod.rs  synapse.rs  threshold.rs  transmission.rs
crates/bion-cns/src/execution/: action_potential.rs  action_wave.rs  executor.rs  graded_potential.rs  mod.rs  pacemaker.rs
crates/bion-cns/src/hydration/: hydrate_circuit.rs  hydrate_subgraph.rs  mod.rs  rebuild_fragment.rs  snapshot.rs
crates/bion-cns/src/loops/: execution_loop.rs  mod.rs  output_loop.rs  watch_loop.rs
crates/bion-cns/src/runtime/: cns_runtime.rs  mod.rs  shutdown.rs  start.rs
crates/bion-cns/src/types/: circuit_fragment.rs  cns_error.rs  mod.rs  revision_cursor.rs
crates/bion-cns/tests/: boundary_lint.rs  integration.rs  mock_gateway.rs
crates/bion-connectome/: Cargo.toml
crates/bion-cortex/: Cargo.toml  LICENSE-MIT
crates/bion-genesis/: Cargo.toml
crates/bion-membrane/: Cargo.toml
crates/bion-pns/: Cargo.toml  LICENSE-APACHE
crates/bion-pns/src/: lib.rs
crates/bion-pns/src/db/: infinite_db.rs  mod.rs
crates/bion-pns/src/gateway/: mod.rs  pns_reader.rs  pns_watcher.rs  pns_writer.rs
crates/bion-pns/src/reader/: fetch_fibers.rs  fetch_neuron.rs  fetch_subgraph.rs  mod.rs
crates/bion-pns/src/transport/: mod.rs
crates/bion-pns/src/transport/cli/: mod.rs  read_line.rs  write_output.rs
crates/bion-pns/src/transport/ws/: accept_connection.rs  mod.rs  read_impulse.rs  write_state_update.rs
crates/bion-pns/src/types/: definition_change.rs  fiber_descriptor.rs  impulse_envelope.rs  mod.rs  neuron_descriptor.rs  pns_error.rs  reconcile_action.rs  revision_ack.rs  state_update.rs  subgraph_snapshot.rs
crates/bion-pns/src/watcher/: mod.rs  reconcile.rs  spawn_watcher.rs  translate_event.rs  watcher_from_handle.rs
crates/bion-pns/src/writer/: mod.rs  write_ack.rs  write_definition.rs  write_state.rs
crates/bion-soma/: Cargo.toml  VOCABULARY.md  bion-soma-plan.md
crates/bion-soma/src/: id.rs  lib.rs  neuron.rs  polarity.rs  signal.rs  tag.rs
crates/bion-soma/tests/: purity_lint.rs  vocabulary_lint.rs
crates/bion/src/: lib.rs
scripts/: lint_single_function.sh  lint_vocabulary.sh
src/: lib.rs
