[workspace]
members = [
    "crates/bion-soma",
    "crates/bion-pns",
    "crates/bion-cns",
    "crates/bion",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bion"]
categories = ["development-tools"]
repository = "https://github.com/joneseysinno/bion"

[workspace.dependencies]
bion-soma = { path = "crates/bion-soma", version = "0.1.0" }
bion-pns = { path = "crates/bion-pns", version = "0.1.0" }
bion-cns = { path = "crates/bion-cns", version = "0.1.0" }
tokio = { version = "1", features = ["rt", "sync"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
tokio-tungstenite = { version = "0.21" }
axum = { version = "0.7" }
