[package]
name = "bion-cortex"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Cortical processing for the Bion crate ecosystem."
include = [
    "Cargo.toml",
    "src/**/*",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
