[package]
name = "bion-soma"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Soma core for the Bion crate ecosystem."
include = [
    "Cargo.toml",
    "src/**/*",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
bridge = []

[dev-dependencies]
